# Hatchet project build options
#============================================================================


# compiler args
#============================================================================
option(
    'ldflags',
    type : 'array',
    value : [
        '-L/usr/local/lib',
        '-L/usr/lib',
        '-L/lib'],
    description : 'Link flags')

option(
    'cxxflags',
    type : 'array',
    value : [
        '-Wdeprecated', 
        '-Wno-pedantic',
        '-Wno-non-virtual-dtor',
        '-Wno-unused-parameter'],
    description : 'C build flags')

option(
    'with_tools',
    type : 'boolean',
    value : 'true',
    description : 'Build hatchet tools')

option(
    'with_tests',
    type : 'boolean',
    value : 'true',
    description : 'Build hatchet with tests')
