# test build file
#============================================================================


test_dirs = [
    '01.sparsetable_unit_test',
    '02.type_traits_unit_test',
    '03.template_util_unit_test',
    '04.simple_test',
    '05.hashtable_test',
    '06.libc_allocator_with_realloc_test',
    '07.simple_compat_test',
    ]


foreach dir : test_dirs
    subdir(dir)
endforeach
